<resources>
    <string name="app_name">DemoApp</string>
    <string name="log_message_hint">Syft will tell you what happens in this area</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="start">Start Cycle</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="gateway_url">Gateway URL: pygrid.openmined.xyz</string>
    <string name="model_name">Model Name: MINST</string>
    <string name="start_federation_training">Start Federation Training</string>
    <string name="model_version">Model version</string>
    <string name="app_description">KotlinSyft Demo</string>
</resources>
